# orkestrator-ai

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  CONTINUITY.md  README.md  bunfig.toml  conductor.json  index.html  orkestrator-ai.json  package.json
.claude/: settings.local.json
docker/: Dockerfile  build.sh  entrypoint.sh  git-branch-helpers.sh  init-firewall.sh  update-firewall.sh  workspace-setup.sh
docs/: code-review-prompt-enhancement-spec.md  current-review-prompt.md  mcp-support-plan.md  second-opinion.md
http:/: CONTINUITY.md
logos/: ork-logo.afdesign  ork-logo2.afdesign
scripts/: codesign-app.sh  download-bun.sh  download-claude.sh  download-codex.sh  download-opencode.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: fix_path_env.rs  lib.rs  main.rs
src-tauri/src/claude_cli/: mod.rs
src-tauri/src/claude_tmux/: backend.rs  hooks.rs  manager.rs  mod.rs  session.rs  transcript.rs
src-tauri/src/commands/: claude.rs  claude_cli.rs  claude_state.rs  claude_tmux.rs  codex.rs  config.rs  credentials.rs  docker.rs  editor.rs  environments.rs  files.rs  github.rs  kanban.rs  local_servers.rs  local_terminal.rs  mod.rs  network.rs  opencode.rs  projects.rs  sessions.rs  terminal.rs
src-tauri/src/credentials/: mod.rs  sync.rs
src-tauri/src/docker/: client.rs  container.rs  image.rs  mod.rs
src-tauri/src/local/: mod.rs  ports.rs  process.rs  pty.rs  servers.rs  worktree.rs
src-tauri/src/models/: mod.rs
src-tauri/src/pty/: mod.rs
src-tauri/src/storage/: mod.rs
(+293 files in other folders)
