[package]
name = "orkestrator-ai"
version = "0.1.0"
description = "Claude Code Environment Orchestrator - Manage isolated Docker-based dev environments"
authors = ["Arkaydeus"]
edition = "2021"

[lib]
name = "orkestrator_ai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
thiserror = "2"

# Docker integration
bollard = "0.18"
futures = "0.3"

# Logging
tracing = "0.1"
regex = "1.12.2"

# Encoding
hex = "0.4"
base64 = "0.22"
tar = "0.4"

# Note: macOS keychain access now uses the `security` CLI tool instead of
# the security-framework crate. This allows us to retrieve credentials by
# service name only, without needing to know the account name.

[dev-dependencies]
tempfile = "3"
